tests/cases/smoke/invalid/expr_and_non_bool.dp
var x = 1
var bad = x and true
